--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
+                <artifactId>maven-resources-plugin</artifactId>
                 <version>2.5.3</version>
             </plugin>
         </plugins>
